--- a/src/SCSS/base/global.scss
+++ b/src/SCSS/base/global.scss
@@ -42,3 +42,8 @@ button {
   border: none;
   font-size: inherit;
 }
+
+link {
+  -webkit-appearance: none;
+  color: rgb(80, 220, 255);
+}
