--- a/src/SCSS/components/carosel-btn.scss
+++ b/src/SCSS/components/carosel-btn.scss
@@ -1,8 +1,8 @@
 .carosell__btn {
   position: absolute;
   top: 0;
-  left: 1%;
-  width: 98%;
+  left: 2%;
+  width: 96%;
   margin: 0 auto;
   height: 100%;
   display: flex;
