--- a/src/SCSS/layout/about.scss
+++ b/src/SCSS/layout/about.scss
@@ -22,14 +22,15 @@
       z-index: 1;
       @include transition(long);
 
-      &:first-child {
-        // z-index: 1;
-        // transform: translteX(-100vw);
-      }
-      &:last-child {
-        // z-index: 2;
-        // transform: translteX(100vw);
-      }
+      // &:first-child {
+      // z-index: 1;
+      // transform: translteX(-100vw);
+      // }
+
+      // &:last-child {
+      // z-index: 2;
+      // transform: translteX(100vw);
+      // }
     }
     // @extend %yoda;
   }
