--- a/src/SCSS/layout/portfolio.scss
+++ b/src/SCSS/layout/portfolio.scss
@@ -20,14 +20,14 @@
       z-index: 1;
       @include transition(long);
 
-      &:first-child {
-        // z-index: 1;
-        // transform: translateX(-110vw);
-      }
-      &:nth-child(2) {
-        // z-index: 2;
-        // transform: translateX(-110vw);
-      }
+      // &:first-child {
+      // z-index: 1;
+      // transform: translateX(-110vw);
+      // }
+      // &:nth-child(2) {
+      // z-index: 2;
+      // transform: translateX(-110vw);
+      // }
     }
 
     // @extend %yoda;
